[package]
name = "data-engineering-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["fighter", "pagerank", "community-detection"]

[[bin]]
name = "fighter"
path = "fighter/src/main.rs"

[[bin]]
name = "pagerank"
path = "pagerank/src/main.rs"

[[bin]]
name = "community-detection"
path = "community-detection/src/main.rs"
